# calculator

./: Cargo.toml  README.md  build.rs
assets/templates/: resources.gresource.xml  window.ui
src/: load.rs  main.rs
src/display/: display.ui  imp.rs  mod.rs
src/logic/: mod.rs
src/ui/: mod.rs
